syntax = "proto3";

package proto;

option go_package = "distirbuted-key-store/proto";

service KV {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Gossip(GossipRequest) returns (GossipResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {}

message JoinRequest {
  string node_id = 1;
  string raft_address = 2;
  string grpc_address = 3;
}

message JoinResponse {}

message GossipRequest {
  map<string, string> state = 1;
}

message GossipResponse {}
